Test service added

--- a/IndoorPositioningSystem/app/src/main/res/values-bg/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values-bg/strings.xml
@@ -10,4 +10,4 @@
     <string name="beacon_2_y">Beacon 2 y</string>
     <string name="beacon_3_x">Beacon 3 x</string>
     <string name="beacon_3_y">Beacon 3 y</string>
-</resources>  n
+</resources>
