Setting menu added

--- a/IndoorPositioningSystem/app/src/main/res/values-bg/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values-bg/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Вътрешна система за позициониране</string>
+    <string name="app_name">Къде съм?</string>
     <string name="room">Стая</string>
     <string name="room_width">Room width</string>
-    <string name="room_heihgt">Room height</string>
+    <string name="room_height">Room height</string>
     <string name="beacon_1_x">Beacon 1 x</string>
     <string name="beacon_1_y">Beacon 1 y</string>
     <string name="beacon_2_x">Beacon 2 x</string>
