--- a/IndoorPositioningSystem/app/src/main/res/values/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="beacon_3_mac">Beacon 3 Mac</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
-
+    <string name="action_change_map">Change Map</string>
 
     <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_room_width">roomWidth</string>
