--- a/IndoorPositioningSystem/app/src/main/res/values/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/strings.xml
@@ -3,12 +3,22 @@
     <string name="room">Room</string>
     <string name="room_width">Room width</string>
     <string name="room_height">Room height</string>
+    <string name="beacon_1_x">Beacon 1 x</string>
+    <string name="beacon_1_y">Beacon 1 y</string>
+    <string name="beacon_2_x">Beacon 2 x</string>
+    <string name="beacon_2_y">Beacon 2 y</string>
+    <string name="beacon_3_x">Beacon 3 x</string>
+    <string name="beacon_3_y">Beacon 3 y</string>
+    <string name="beacon_4_x">Beacon 4 x</string>
+    <string name="beacon_4_y">Beacon 4 y</string>
     <string name="beacon_1">Beacon 1</string>
     <string name="beacon_1_mac">Beacon 1 Mac</string>
     <string name="beacon_2">Beacon 2</string>
     <string name="beacon_2_mac">Beacon 2 Mac</string>
     <string name="beacon_3">Beacon 3</string>
     <string name="beacon_3_mac">Beacon 3 Mac</string>
+    <string name="beacon_4">Beacon 4</string>
+    <string name="beacon_4_mac">Beacon 4 Mac</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_change_map">Change Map</string>
@@ -39,4 +49,14 @@
     <string name="pref_beacon_3_x_default">0</string>
     <string name="pref_beacon_3_y">beacon3Y</string>
     <string name="pref_beacon_3_y_default">0</string>
+
+    <string name="pref_beacon_4_mac">beacon4Mac</string>
+    <string name="pref_beacon_4_mac_default">DD:12:B2:90:39:48</string>
+    <string name="pref_beacon_4_x">beacon4X</string>
+    <string name="pref_beacon_4_x_default">0</string>
+    <string name="pref_beacon_4_y">beacon4Y</string>
+    <string name="pref_beacon_4_y_default">0</string>
+    <string name="pref_grid_size">gridSize</string>
+    <string name="grid_size">Grid size</string>
+    <string name="pref_grid_size_default">1</string>
 </resources>
