--- a/IndoorPositioningSystem/app/src/main/res/values/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_change_map">Change Map</string>
+    <string name="action_login">Log in</string>
+    <string name="action_logout">Logout</string>
+    <string name="grid_size">Grid size</string>
 
     <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_room_width">roomWidth</string>
@@ -57,6 +60,23 @@
     <string name="pref_beacon_4_y">beacon4Y</string>
     <string name="pref_beacon_4_y_default">0</string>
     <string name="pref_grid_size">gridSize</string>
-    <string name="grid_size">Grid size</string>
     <string name="pref_grid_size_default">1</string>
+
+
+    <!-- Strings related to login -->
+    <string name="title_activity_login">Sign in</string>
+
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_skip_authentication">Skip authentication</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
