--- a/IndoorPositioningSystem/app/src/main/res/values/strings.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="beacon_4">Beacon 4</string>
     <string name="beacon_4_mac">Beacon 4 Mac</string>
     <string name="action_settings">Settings</string>
-    <string name="action_about">About</string>
     <string name="action_change_map">Change Map</string>
     <string name="action_login">Log in</string>
     <string name="action_logout">Logout</string>
@@ -74,11 +73,6 @@
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+
+    <string name="title_activity_venue">VenueActivity</string>
 </resources>
